--- a/app/globals.css
+++ b/app/globals.css
@@ -1,15 +1,13 @@
 @import "tailwindcss";
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --background: #0D0D0D;
+  --foreground: #efefef;
 }
 
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
 }
 
 @media (prefers-color-scheme: dark) {
@@ -22,5 +20,21 @@
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: var(--font-outfit)
+}
+
+
+.my-shadow{
+  position: absolute;
+  width: 50px; 
+  height: 50px;
+  background: #ffffff;
+  border-radius: 100%;
+  filter: blur(45px);
+  z-index: 100;
+  box-shadow: 0 0 100px 1px #ffffff;
+}
+
+.my-drop-shadow{
+  filter: drop-shadow(0 0 2 #ffffff);
 }
